# cheachatapp

./: README.md
cheechat/: .env  Cargo.toml  cert.pem  key.pem  roadmap.md  schema.sql
cheechat/src/: lib.rs  main.rs
cheechat/src/app/: config.rs  mod.rs
cheechat/src/chat/: db.rs  mod.rs  models.rs  server.rs  services.rs  session.rs
cheechat/src/errors/: mod.rs
cheechat/src/users/: db.rs  mod.rs  models.rs  services.rs
cheechat_frontend/: .gitignore  package-lock.json  package.json
cheechat_frontend/src/: middleware.ts
cheechat_frontend/src/app/: layout.tsx  page.tsx
cheechat_frontend/src/app/dashboard/: layout.tsx  page.tsx
cheechat_frontend/src/app/login/: page.tsx
cheechat_frontend/src/app/register/: page.tsx
cheechat_frontend/src/components/: chat-list.tsx  chat-panel.tsx  navigation-bar.tsx
cheechat_frontend/src/lib/: user-utils.ts
