[package]
name = "cheechat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-cors = "0.7.0"
actix-session = {version = "0.10.1", features = ["redis-session"]}
actix-web = { version = "4.9", features = ["rustls-0_23"] }
actix-web-actors = "4.1"
actix-web-lab = "0.22"
awc = "3.2"
bcrypt = "0.15.1"
confik = "0.11"
derive_more = "0.99.7"
dotenvy = "0.15"
env_logger = "0.11.5"
log = "0.4.22"
rustls = {version = "0.23.14"}
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.40.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "time", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
rustls-pemfile = "2.2.0"
